css/timetable.css
/* Timetable content (#page-timetable) */

/* To ensure scalability, all length units should be in em. */
#ttable-positioner{
  font-size:min(1.5vw,16px);
}

#ttable-container{
}
.timetable-dom-root{
  /* Set dynamically at timetable.js: 
   * position, width, height */
}
.timetable-block-body{
  /* Set dynamically at timetable.js: 
   * z-index, top, left, height, width, filter, cursor, 
   * border-radius, background-image, background-color, border-width,
   * padding-right, padding-left*/
  position:absolute;
  display:flex;
  flex-direction:column;
  justify-content:center;
  align-items:center;
  
  transition-property:opacity,filter;
  transition-duration: 0.2s;
  transition-timing-function:linear;
  
  overflow:hidden;
  
  text-align:center;
  
  color:var(--color-text-dark);
  
  border-color:hsl( from var(--color-text-dark) h s l / 70%);
  border-style:solid;
}
.anim-disabled .timetable-block-body{
  transition-duration:0s;
}
.timetable-block-body:hover{
  filter:brightness(0.8);
}

.timetable-block-body.defocus{
  opacity:0.5;
}

.timetable-popup-rail{
  pointer-events:none;
}
.timetable-popup-body{
   /* Set dynamically at timetable.js: 
   * border-width */
  pointer-events:auto;
  position:relative;
  border-color:hsl( from var(--color-text-dark) h s l / 70%);
  border-style:solid;
  color:var(--color-text-dark);
}

.timetable-popup-close-button{
  transition-property: opacity;
  transition-duration: 0.3s;
  transition-timing-function: linear;
  /* FF doesn't support this apperantly
  transition-behavior: allow-discrete; 
  display:block;*/
  opacity:1.0;
  cursor:pointer;
  position: absolute;
  top: 0;
  right:0;
  width:2em;
  height:2em;
  z-index:1;
}
.anim-disabled .timetable-popup-close-button{
  transition-duration:0s;
}
.timetable-popup-close-svg{
  transition-property: transform;
  transition-duration: 0.5s;
  transition-timing-function: cubic-bezier(0.3, 1.8, 0.5, 1);
  position:absolute;
  top:0.15em;
  left:0.15em;
  right:0.15em;
  bottom:0.15em;
  /* This is to stop hover oscillations */
  pointer-events:none;
}
.anim-disabled .timetable-popup-close-svg{
  transition-duration:0s;
}
.timetable-popup-close-button:hover .timetable-popup-close-svg{
  transform: scale(1.2) rotate(90deg);
}

.timetable-popup-close-button.hidden{
  opacity:0.0;
  pointer-events:none;
}

.timetable-block-text{
  /* Set dynamically at timetable.js: 
   * font-size */
  transition-property:transform;
  transition-duration:0.5s;
  transition-timing-function:ease-in-out;
  text-align:center;
  font-weight:700;
  line-height:1.4;
}
.anim-disabled .timetable-block-text{
  transition-duration:0s;
}
.timetable-block-vertical .timetable-block-text{
  width:15em;
}
.timetable-block-vertical .timetable-block-text {
  transform:rotate(90deg);
}

.timetable-popup-content-container{
  overflow:hidden;
  padding:0.8em;
  display:flex;
  flex-direction:column;
  justify-content:center;
  align-items:stretch;
  text-align:center;
  gap:0.2em;
}
.timetable-popup-title{
  text-align:center;
  font-size:1.1em;
  font-weight:700;
  padding-left:0.8em;
  padding-right:0.8em;
  line-height:1.4;
}
.timetable-desc-time{
  margin-top:0.0em;
  font-size:0.8em;
  font-style:italic;
}
.timetable-desc-text{
  margin-top:0.1em;
  font-size:0.9em;
  font-weight:400;
  line-height:1.4;
}

.timetable-tick{
  /* Set dynamically at timetable.js: 
   * top, left, height, width, border-bottom-width */
  z-index:5;
  position:absolute;
  border-bottom-color:hsl(from var(--color-text-auto) h s l / 50%);
  border-bottom-style:solid;
}
.timetable-tick.hidden{
  display:none;
}
.timetable-tick-text{
  /* Set dynamically at timetable.js: 
   * left, right */
  position:absolute;
  bottom:0;
  z-index:6;
  font-size:0.8em;
  font-weight:700;
}

.timetable-cgroup-outline{
  /* Set dynamically at timetable.js: 
   * left, width, height, background */
  position:absolute;
  top:0;
  border-radius:0.5em;
  z-index:50;
  background:linear-gradient(
    to bottom, 
    hsl(from var(--color-text-auto) h s l / 50%), 
    hsl(from var(--color-text-auto) h s l / 0%));
  transition-property:opacity;
  transition-duration:0.2s;
  transition-timing-function:linear;
}
.anim-disabled .timetable-cgroup-outline{
  transition-duration:0s;
}
.timetable-cgroup-outline.defocus{
  opacity:0.5;
}
.timetable-cgroup-label{
  /* Set dynamically at timetable.js: 
   *  */
  position:absolute;
  left:0;
  right:0;
  top:0;
  font-size:1.5em;
  display:flex;
  justify-content:center;
  align-items:center;
  flex-direction:column;
  gap:0.2em;
  color: var(--color-text-reversed);
}
.timetable-cgroup-label-line2{
  font-size:0.8em;
}

#timetable-mobile-move-button{
  /*display:flex;*/
  display:none;
  flex-direction:row;
  justify-content:space-between;
  align-items:center;
  
}
#timetable-mobile-move-button > div{
  color:#FFFFFF;
  padding:16px;
  cursor:pointer;
  pointer-events:auto;
  text-shadow: 0 0 10px #00000080;
  font-size:64px;
}


/* Responsive Section */
/* Targeting down to 300px. */

/* Mobile mode */
@media (width<640px) {
  #ttable-container{
    transition-property:margin;
    transition-duration:0.5s;
  }
  .anim-disabled #ttable-container{
    transition-duration:0s;
  }
  #ttable-positioner{
    width:100%;
    overflow-x:visible;
    font-size:min(4.0vw,16px);
  }
  
  #timetable-mobile-move-button{
    display:flex;
  }
}

/* Smaller Mobiles */
@media (width<480px) {
}

/* Ridiculously Small Mobiles */
@media (width<360px) {
}

/* Mobile ladder */
/* PC <-640-> Big Mobile <-480-> Small Mobile <-360-> Ridiculous <-300-> I give up */
@media (width>=480px) and (width<640px) {
  /* 640 ~ 480 : Big Mobiles */
}
@media (width>=360px) and (width<480px) {
  /* 480 ~ 360 : Small Mobiles */
}
@media (width<360px) {
  /* 360 ~ 300 : Ridiculously Small Mobiles */
}

